@@ -3,3 +3,7 @@ Miscellaneous performance and other improvements.
 Defines and uses Rf_set_elements_to_NA.
 
 Speeds up any and all.
+
+Expands scalar stack.
+
+Speeds up nchar.
