@@ -133,14 +133,14 @@ static SEXP do_nchar(SEXP call, SEXP op, SEXP args, SEXP env)
 
     checkArity(op, args);
     if (isFactor(CAR(args)))
-	error(_("'%s' requires a character vector"), "nchar()");
+        error(_("'%s' requires a character vector"), "nchar()");
     PROTECT(x = coerceVector(CAR(args), STRSXP));
     if (!isString(x))
-	error(_("'%s' requires a character vector"), "nchar()");
+        error(_("'%s' requires a character vector"), "nchar()");
     len = LENGTH(x);
     stype = CADR(args);
     if (!isString(stype) || LENGTH(stype) != 1)
-	error(_("invalid '%s' argument"), "type");
+        error(_("invalid '%s' argument"), "type");
     type = CHAR(STRING_ELT(stype, 0)); /* always ASCII */
     ntype = strlen(type);
     if (ntype == 0) error(_("invalid '%s' argument"), "type");
@@ -148,72 +148,78 @@ static SEXP do_nchar(SEXP call, SEXP op, SEXP args, SEXP env)
     if (allowNA == NA_LOGICAL) allowNA = 0;
 
     PROTECT(s = allocVector(INTSXP, len));
+    int type_bytes = strncmp(type, "bytes", ntype) == 0;
+    int type_chars = strncmp(type, "chars", ntype) == 0;
+    int type_width = strncmp(type, "width", ntype) == 0;
     vmax = VMAXGET();
     for (i = 0; i < len; i++) {
-	SEXP sxi = STRING_ELT(x, i);
-	if (sxi == NA_STRING) {
-	    INTEGER(s)[i] = 2;
-	    continue;
-	}
-	if (strncmp(type, "bytes", ntype) == 0) {
-	    INTEGER(s)[i] = LENGTH(sxi);
-	} else if (strncmp(type, "chars", ntype) == 0) {
-	    if (IS_UTF8(sxi)) { /* assume this is valid */
-		const char *p = CHAR(sxi);
-		nc = 0;
-		for( ; *p; p += utf8clen(*p)) nc++;
-		INTEGER(s)[i] = nc;
-	    } else if (IS_BYTES(sxi)) {
-		if (!allowNA) /* could do chars 0 */
-		    error(_("number of characters is not computable for element %d in \"bytes\" encoding"), i+1);
-		INTEGER(s)[i] = NA_INTEGER;
-	    } else if (mbcslocale) {
-		nc = mbstowcs(NULL, translateChar(sxi), 0);
-		if (!allowNA && nc < 0)
-		    error(_("invalid multibyte string %d"), i+1);
-		INTEGER(s)[i] = nc >= 0 ? nc : NA_INTEGER;
-	    } else
-		INTEGER(s)[i] = strlen(translateChar(sxi));
-	} else if (strncmp(type, "width", ntype) == 0) {
-	    if (IS_UTF8(sxi)) { /* assume this is valid */
-		const char *p = CHAR(sxi);
-		wchar_t wc1;
-		nc = 0;
-		for( ; *p; p += utf8clen(*p)) {
-		    utf8toucs(&wc1, p);
-		    nc += Ri18n_wcwidth(wc1);
-		}
-		INTEGER(s)[i] = nc;
-	    } else if (IS_BYTES(sxi)) {
-		if (!allowNA) /* could do width 0 */
-		    error(_("width is not computable for element %d in \"bytes\" encoding"), i+1);
-		INTEGER(s)[i] = NA_INTEGER;
-	    } else if (mbcslocale) {
-		xi = translateChar(sxi);
-		nc = mbstowcs(NULL, xi, 0);
-		if (nc >= 0) {
-		    wc = (wchar_t *) R_AllocStringBuffer((nc+1)*sizeof(wchar_t), &cbuff);
+        SEXP sxi = STRING_ELT(x, i);
+        if (sxi == NA_STRING) {
+            INTEGER(s)[i] = 2;
+            continue;
+        }
+        if (type_bytes) {
+            INTEGER(s)[i] = LENGTH(sxi);
+        }
+        else if (type_chars) {
+            if (IS_UTF8(sxi)) { /* assume this is valid */
+                const char *p = CHAR(sxi);
+                nc = 0;
+                for( ; *p; p += utf8clen(*p)) nc++;
+                INTEGER(s)[i] = nc;
+            } else if (IS_BYTES(sxi)) {
+                if (!allowNA) /* could do chars 0 */
+                    error(_("number of characters is not computable for element %d in \"bytes\" encoding"), i+1);
+                INTEGER(s)[i] = NA_INTEGER;
+            } else if (mbcslocale) {
+                nc = mbstowcs(NULL, translateChar(sxi), 0);
+                if (!allowNA && nc < 0)
+                    error(_("invalid multibyte string %d"), i+1);
+                INTEGER(s)[i] = nc >= 0 ? nc : NA_INTEGER;
+            } else
+                INTEGER(s)[i] = strlen(translateChar(sxi));
+        }
+        else if (type_width) {
+            if (IS_UTF8(sxi)) { /* assume this is valid */
+                const char *p = CHAR(sxi);
+                wchar_t wc1;
+                nc = 0;
+                for( ; *p; p += utf8clen(*p)) {
+                    utf8toucs(&wc1, p);
+                    nc += Ri18n_wcwidth(wc1);
+                }
+                INTEGER(s)[i] = nc;
+            } else if (IS_BYTES(sxi)) {
+                if (!allowNA) /* could do width 0 */
+                    error(_("width is not computable for element %d in \"bytes\" encoding"), i+1);
+                INTEGER(s)[i] = NA_INTEGER;
+            } else if (mbcslocale) {
+                xi = translateChar(sxi);
+                nc = mbstowcs(NULL, xi, 0);
+                if (nc >= 0) {
+                    wc = (wchar_t *) R_AllocStringBuffer((nc+1)*sizeof(wchar_t), &cbuff);
 
-		    mbstowcs(wc, xi, nc + 1);
-		    INTEGER(s)[i] = Ri18n_wcswidth(wc, 2147483647);
-		    if (INTEGER(s)[i] < 1) INTEGER(s)[i] = nc;
-		} else if (allowNA)
-		    error(_("invalid multibyte string %d"), i+1);
-		else
-		    INTEGER(s)[i] = NA_INTEGER;
-	    } else
-		INTEGER(s)[i] = strlen(translateChar(sxi));
-	} else
-	    error(_("invalid '%s' argument"), "type");
-	VMAXSET(vmax);
+                    mbstowcs(wc, xi, nc + 1);
+                    INTEGER(s)[i] = Ri18n_wcswidth(wc, 2147483647);
+                    if (INTEGER(s)[i] < 1) INTEGER(s)[i] = nc;
+                } else if (allowNA)
+                    error(_("invalid multibyte string %d"), i+1);
+                else
+                    INTEGER(s)[i] = NA_INTEGER;
+            } else
+                INTEGER(s)[i] = strlen(translateChar(sxi));
+        }
+        else
+            error(_("invalid '%s' argument"), "type");
+        VMAXSET(vmax);
     }
     R_FreeStringBufferL(&cbuff);
     if ((d = getAttrib(x, R_NamesSymbol)) != R_NilValue)
-	setAttrib(s, R_NamesSymbol, d);
+        setAttrib(s, R_NamesSymbol, d);
     if ((d = getDimAttrib(x)) != R_NilValue)
-	setAttrib(s, R_DimSymbol, d);
+        setAttrib(s, R_DimSymbol, d);
     if ((d = getAttrib(x, R_DimNamesSymbol)) != R_NilValue)
-	setAttrib(s, R_DimNamesSymbol, d);
+        setAttrib(s, R_DimNamesSymbol, d);
     UNPROTECT(2);
     return s;
 }
@@ -291,35 +297,35 @@ static SEXP do_substr(SEXP call, SEXP op, SEXP args, SEXP env)
     l = LENGTH(so);
 
     if (!isString(x))
-	error(_("extracting substrings from a non-character object"));
+        error(_("extracting substrings from a non-character object"));
     len = LENGTH(x);
     PROTECT(s = allocVector(STRSXP, len));
     if (len > 0) {
-	if (!isInteger(sa) || !isInteger(so) || k == 0 || l == 0)
-	    error(_("invalid substring argument(s)"));
+        if (!isInteger(sa) || !isInteger(so) || k == 0 || l == 0)
+            error(_("invalid substring argument(s)"));
 
-	for (i = 0; i < len; i++) {
-	    start = INTEGER(sa)[i % k];
-	    stop = INTEGER(so)[i % l];
-	    el = STRING_ELT(x,i);
-	    if (el == NA_STRING || start == NA_INTEGER || stop == NA_INTEGER) {
-		SET_STRING_ELT_NA(s, i);
-		continue;
-	    }
-	    ienc = getCharCE(el);
-	    ss = CHAR(el);
-	    slen = LENGTH(el);
-	    if (start < 1) start = 1;
-	    if (start > stop)
+        for (i = 0; i < len; i++) {
+            start = INTEGER(sa)[i % k];
+            stop = INTEGER(so)[i % l];
+            el = STRING_ELT(x,i);
+            if (el == NA_STRING || start == NA_INTEGER || stop == NA_INTEGER) {
+                SET_STRING_ELT_NA(s, i);
+                continue;
+            }
+            ienc = getCharCE(el);
+            ss = CHAR(el);
+            slen = LENGTH(el);
+            if (start < 1) start = 1;
+            if (start > stop)
                 SET_STRING_ELT_BLANK (s, i);
-	    else {
+            else {
                 size_t beginning, end;
-		(void) find_substr (ss, slen, ienc, start, stop, 
+                (void) find_substr (ss, slen, ienc, start, stop, 
                                     &beginning, &end);
                 SET_STRING_ELT (s, i, 
                   mkCharLenCE (ss+beginning, (int)(end-beginning), ienc));
             }
-	}
+        }
     }
     DUPLICATE_ATTRIB(s, x);
     /* This copied the class, if any */
@@ -348,32 +354,32 @@ static SEXP do_substrgets(SEXP call, SEXP op, SEXP args, SEXP env)
     l = LENGTH(so);
 
     if (!isString(x))
-	error(_("replacing substrings in a non-character object"));
+        error(_("replacing substrings in a non-character object"));
     len = LENGTH(x);
     PROTECT(s = allocVector(STRSXP, len));
     if (len > 0) {
-	if (!isInteger(sa) || !isInteger(so) || k == 0 || l == 0)
-	    error(_("invalid substring argument(s)"));
+        if (!isInteger(sa) || !isInteger(so) || k == 0 || l == 0)
+            error(_("invalid substring argument(s)"));
 
-	v = LENGTH(value);
-	if (!isString(value) || v == 0) error(_("invalid value"));
-	
-	vmax = VMAXGET();
-	for (i = 0; i < len; i++) {
-	    el = STRING_ELT(x, i);
-	    v_el = STRING_ELT(value, i % v);
-	    start = INTEGER(sa)[i % k];
-	    stop = INTEGER(so)[i % l];
-	    if (el == NA_STRING || v_el == NA_STRING ||
-		start == NA_INTEGER || stop == NA_INTEGER) {
-		SET_STRING_ELT_NA(s, i);
-		continue;
-	    }
-	    ienc = getCharCE(el);
-	    ss = CHAR(el);
-	    slen = LENGTH(el);
-	    if (start < 1) start = 1;
-	    if (start > stop) {
+        v = LENGTH(value);
+        if (!isString(value) || v == 0) error(_("invalid value"));
+        
+        vmax = VMAXGET();
+        for (i = 0; i < len; i++) {
+            el = STRING_ELT(x, i);
+            v_el = STRING_ELT(value, i % v);
+            start = INTEGER(sa)[i % k];
+            stop = INTEGER(so)[i % l];
+            if (el == NA_STRING || v_el == NA_STRING ||
+                start == NA_INTEGER || stop == NA_INTEGER) {
+                SET_STRING_ELT_NA(s, i);
+                continue;
+            }
+            ienc = getCharCE(el);
+            ss = CHAR(el);
+            slen = LENGTH(el);
+            if (start < 1) start = 1;
+            if (start > stop) {
                 SET_STRING_ELT(s, i, STRING_ELT(x, i));
                 continue;
             }
@@ -440,7 +446,7 @@ static SEXP do_substrgets(SEXP call, SEXP op, SEXP args, SEXP env)
 #define FIRSTCHAR(i) (isspace((int)buff1[i-1]))
 #define LASTCHAR(i) (!isspace((int)buff1[i-1]) && (!buff1[i+1] || isspace((int)buff1[i+1])))
 #define LOWVOW(i) (buff1[i] == 'a' || buff1[i] == 'e' || buff1[i] == 'i' || \
-		   buff1[i] == 'o' || buff1[i] == 'u')
+        	   buff1[i] == 'o' || buff1[i] == 'u')
 
 
 /* memmove does allow overlapping src and dest */
