@@ -149,6 +149,7 @@
   \item Improved methods for symbol lookup are now used, which increase
         speed in many contexts, and especially in functions that are
         defined in packages (rather than in the global workspace).
+  \item The speed of \code{nchar} has been greatly improved.
   \item The speed of \code{which} has been improved.
   \item The speed of \code{.Call} has been improved.
   \item The speed of \code{any} and \code{all} has been improved,
